# hw_mod_11_web

./: .example.env  docker-compose.yaml  main.py  pyproject.toml  test.db  tmp.text
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 12c555a5a27b_add_roles_for_user.py  79a845601090_add_user_for_contact.py  83f2867baa67_init.py  d29adb7fcc6c_edit_user.py  d6c50ca1a3a2_add_field_confirmed_user.py  d71b837f04b2_add_user.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py  roles.py
src/services/templates/: email_template.html
tests/: conftest.py  test_repository_contacts.py  test_repository_users.py  test_route_auth.py
