[tool.poetry]
name = "mod-11-web"
version = "0.1.0"
description = ""
authors = ["Nataliya2401 <sabotab2000@gmail.com>"]
readme = "README.md"
packages = [{include = "mod_11_web"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.99.1"
sqlalchemy = ">=2.0.17"
pydantic = {version = ">=1.10.10", extras = ["email"]}
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
fastapi-mail = "^1.3.1"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.5"
redis = ">=4.5.4"
cloudinary = "^1.33.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]